# accelerate-blas-sys

./: Cargo.toml  LICENSE.txt  README.md  build.rs
.cargo/: config
.github/workflows/: publish.yml
headers/: blas.h
src/: lib.rs
